--- a/project-b-template/css/style.css
+++ b/project-b-template/css/style.css
@@ -1,9 +1,15 @@
-body {
+.body {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
+}
+
+.bodydraft {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 p {
@@ -20,7 +26,7 @@ a {
   font-family: Zeyada;
 }
 
-.container-landing-page {
+.container-landing-page1 {
   width: fit-content;
   height: fit-content;
   /* Explore more with the flexbox properties! */
@@ -31,39 +37,309 @@ a {
   flex-direction: column;
 }
 
-.main-container {
-  background-color: lightgray;
+.container-landing-page2 {
+  width: fit-content;
+  height: fit-content;
+  /* Explore more with the flexbox properties! */
+  display: flex;
+  /* position: fixed; */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+
+/* .interface-container {
+  background-color: green;
 
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.interface-container {
-  background-color: gray;
 
+/* section 1 */
+.flex-container-01 {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.box1 {
-  width: 320px;
-  height: 50px;
+.box-010 {
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: flex;
+  margin-left: auto;
+  margin-right: 0px;
+  margin-top: 50px;
+  margin-bottom: 0px;
   padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+  border: 20px solid #000;
 }
 
-/* FLEXBOX PROPERTIES */
-/* 
-flex-direction
-flex-wrap
-flex-flow
-justify-content
-align-items
-align-content
-*/
+.box-011 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: -40px;
+  margin-right: -20px;
+  margin-top: 70px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.box-012 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: -20px;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+
+/* section 2 */
+.flex-container-02 {
+  display: flex;
+}
+
+.box-020 {
+  background-color: white;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  display: flex;
+  margin-left: auto;
+  margin-right: 0px;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000;
+}
+
+.box-021 {
+  background-color: white;
+  width: 200px;
+  height: 200px;
+  position: relative;
+  display: flex;
+  margin-left: -40px;
+  margin-right: -20px;
+  margin-top: 70px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.box-022 {
+  background-color: white;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  margin-left: -20px;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.box-023 {
+  background-color: white;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  margin-left: -40px;
+  margin-right: -20px;
+  margin-top: 70px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+
+/* section 3 */
+.flex-container-03 {
+  display: flex;
+}
+
+.box-030 {
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: flex;
+  margin-left: auto;
+  margin-right: 0px;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000;
+}
+
+.box-031 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: -40px;
+  margin-right: -20px;
+  margin-top: 70px;
+  margin-bottom: -10px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.box-032 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: -20px;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.flex-container-04 {
+  display: flex;
+}
+
+.box-040 {
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: flex;
+  margin-left: 40px;
+  margin-right: 0px;
+  margin-top: -70px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000;
+}
+
+.box-041 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: -70px;
+  margin-right: -20px;
+  margin-top: -40px;
+  margin-bottom: -20px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.box-042 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: 0px;
+  margin-right: 60px;
+  margin-top: -50px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.flex-container-05 {
+  display: flex;
+}
+
+.box-050 {
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: flex;
+  margin-left: 20px;
+  margin-right: -40px;
+  margin-top: -50px;
+  margin-bottom: 0px;
+  padding: 1s0px;
+  border: 20px solid #000;
+}
+
+.box-051 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: 0px;
+  margin-right: -80px;
+  margin-top: -80px;
+  margin-bottom: 40px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+.box-052 {
+  background-color: white;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin-left: 50px;
+  margin-right: auto;
+  margin-top: -60px;
+  margin-bottom: 0px;
+  padding: 10px;
+  border: 20px solid #000
+}
+
+/* section 4 */
+.flex-container-06 {
+  display: flex;
+}
+
+.box-060 {
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: flex;
+  margin-left: -30px;
+  margin-right: -20px;
+  margin-top: 100px;
+  margin-bottom: 0px;
+  padding: 1s0px;
+  border: 20px solid #000;
+}
+
+.box-061 {
+  background-color: white;
+  position: relative;
+  width: 600px;
+  height: 300px;
+  display: flex;
+  margin-left: 0px;
+  margin-right: -80px;
+  margin-top: 60px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 20px solid #000
+}
 
 #canvas-container1 {
   background-image: url(project-b-template/back.jpg);
