--- a/project-b-template/css/main.css
+++ b/project-b-template/css/main.css
@@ -5,17 +5,34 @@
 }
 
 .main-container {
-    background-color: lightgray;
+    background-color: red;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 400px;
+    height: 400px;
 }
 
 .interface-container {
-    background-color: gray;
+    background-color: green;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 40px;
+    height: 40px;
+}
+
+.box1 {
+    background-color: #96B6C5;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    /* margin-left: -20px;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 0px; */
+    /* padding: 10px; */
 }
