--- a/project-b-template/css/style.css
+++ b/project-b-template/css/style.css
@@ -407,12 +407,201 @@ h1 {
 }
 
 .dial {
-  background-color: aqua;
-  color: blue;
-  width: 200px;
-  height: 150px;
   position: absolute;
+  display: none;
+}
+
+#dial-01 {
+  width: 200px;
+  height: 250px;
   top: 100px;
   left: 100px;
-  display: none;
+  border: 5px solid yellow;
+  background-color: aqua;
+  font-family: Smooch;
+  font-size: xx-large;
+}
+
+#dial-02 {
+  width: 200px;
+  height: 75px;
+  top: 50px;
+  left: 800px;
+  border: 5px solid firebrick;
+  background-color: yellow;
+  font-family: Kalam;
+}
+
+#dial-03 {
+  width: 200px;
+  height: 80px;
+  top: 100px;
+  right: 100px;
+  border: 5px solid yellow;
+  background-color: pink;
+  font-family: Ephesis;
+  font-size: xx-large;
+}
+
+#dial-04 {
+  width: 100px;
+  height: 80px;
+  top: 600px;
+  left: 300px;
+  border: 5px solid cornflowerblue;
+  background-color: aquamarine;
+  font-family: Courgette;
+  font-size: larger;
+}
+
+#dial-05 {
+  width: 100px;
+  height: 80px;
+  top: 490px;
+  left: 700px;
+  border: 5px solid black;
+  background-color: lightgray;
+  font-family: Orbitron;
+}
+
+#dial-06 {
+  width: 100px;
+  height: 80px;
+  top: 470px;
+  left: 930px;
+  border: 5px solid black;
+  background-color: white;
+  font-family: Dhurjati;
+}
+
+#dial-07 {
+  width: 200px;
+  height: 80px;
+  top: 700px;
+  right: 160px;
+  border: 5px solid darkviolet;
+  background-color: yellow;
+  font-family: Zeyada;
+  font-size: larger;
+}
+
+#dial-08 {
+  width: 150px;
+  height: 75px;
+  top: 930px;
+  left: 200px;
+  border: 5px solid gray;
+  background-color: rgb(190, 181, 140);
+}
+
+#dial-09 {
+  width: 200px;
+  height: 55px;
+  top: 820px;
+  left: 765px;
+  border: 5px solid white;
+  background-color: black;
+  color: white;
+  font-family: Righteous;
+}
+
+#dial-10 {
+  width: 200px;
+  height: 70px;
+  top: 830px;
+  right: 200px;
+  border: 5px solid rgb(21, 255, 0);
+  background-color: rgb(255, 98, 0);
+  font-family: Acme;
+  font-size: larger;
+}
+
+#dial-11 {
+  width: 150px;
+  height: 70px;
+  top: 1190px;
+  left: 245px;
+  border: 5px solid rgb(67, 67, 255);
+  background-color: rgb(205, 58, 219);
+  color: white;
+  font-family: Questrial;
+}
+
+#dial-12 {
+  width: 150px;
+  height: 70px;
+  top: 1150px;
+  left: 780px;
+  border: 5px solid darkgoldenrod;
+  background-color: burlywood;
+  font-family: Lobster;
+  font-size: larger;
+}
+
+#dial-13 {
+  width: 150px;
+  height: 70px;
+  top: 1200px;
+  right: 300px;
+  border: 5px solid black;
+  background-color: khaki;
+  font-family: Zeyada;
+  font-size: x-large;
+}
+
+#dial-14 {
+  width: 200px;
+  height: 75px;
+  top: 1700px;
+  left: 180px;
+  border: 5px solid rgb(255, 153, 0);
+  background-color: yellow;
+}
+
+#dial-15 {
+  width: 150px;
+  height: 90px;
+  top: 1385px;
+  left: 810px;
+  border: 5px solid rgb(4, 0, 255);
+  background-color: rgb(255, 0, 255);
+  color: yellow;
+  font-family: Sacramento;
+  font-size: xx-large;
+}
+
+#dial-16 {
+  width: 200px;
+  height: 75px;
+  top: 1450px;
+  right: 200px;
+  border: 5px solid rgb(64, 102, 185);
+  background-color: rgb(229, 229, 209);
+  font-family: Orbitron;
+}
+
+#dial-17 {
+  width: 180px;
+  height: 50px;
+  top: 1900px;
+  left: 480px;
+  border: 5px solid white;
+  background-color: black;
+  color: white;
+  font-family: Acme;
+}
+
+#dial-18 {
+  width: 200px;
+  height: 50px;
+  top: 1960px;
+  right: 200px;
+  border: 5px solid black;
+  background-color: rgb(173, 164, 164);
+  font-family: Righteous;
+}
+
+
+iframe {
+  border-width: 0;
 }
