--- a/project-b-template/css/style.css
+++ b/project-b-template/css/style.css
@@ -7,6 +7,16 @@ p {
 
 a {
   font-family: Zeyada;
+  color: black;
+  text-decoration: none;
+  font-size: larger;
+}
+
+a:hover {
+  font-family: Zeyada;
+  color: blue;
+  text-decoration: underline;
+  font-size: x-large;
 }
 
 
